simd add assembly version compare

--- a/gpr_simd/点积优化实战.md
+++ b/gpr_simd/点积优化实战.md
@@ -272,26 +272,75 @@ remainder:
 
 ## 基准测试与性能对比
 
-我们在 Apple M2 芯片上，对两种实现进行了系统的基准测试，输入向量长度从 1 到 8192 不等。部分结果如下：
+我们在 Apple M2 芯片（ARM64 架构）上，对三种实现（GPR、Go SIMD 优化、ARM64 汇编）进行了系统基准测试，输入向量长度从 4 到 4096 不等。
 
-| 长度 | GPR (ns/op) | SIMD (ns/op) | 更快者 |
-|------|-------------|--------------|--------|
-| 1    | 1.23        | 2.44         | GPR    |
-| 4    | 2.73        | 2.17         | SIMD   |
-| 5    | 2.83        | 3.38         | GPR    |
-| 8    | 3.62        | 3.12         | SIMD   |
-| 16   | 6.14        | 8.24         | GPR    |
-| 24   | 11.89       | 8.35         | SIMD   |
-| 64   | 44.22       | 23.36        | SIMD   |
-| 1024 | 1187        | 331.5        | SIMD   |
-| 8192 | 9914        | 3120         | SIMD   |
+### 优化前的测试结果（初始实现）
+
+| 长度 | GPR (ns/op) | SIMD Go (ns/op) | SIMD ARM64原始 (ns/op) | 最快实现 |
+|------|-------------|-----------------|-------------------|--------|
+| 4    | 2.802       | 2.133           | 2.948             | SIMD Go |
+| 8    | 3.687       | 3.050           | 4.073             | SIMD Go |
+| 16   | 6.138       | 7.968           | 6.953             | GPR    |
+| 64   | 43.89       | 22.35           | 35.73             | SIMD Go |
+| 256  | 256.3       | 107.3           | 205.1             | SIMD Go |
+| 1024 | 1189        | 331.9           | 892.5             | SIMD Go |
+| 4096 | 4971        | 1311            | 3660              | SIMD Go |
+
+### 优化后的测试结果
+
+| 长度 | GPR (ns/op) | SIMD Go (ns/op) | SIMD ARM64优化 (ns/op) | 最快实现 |
+|------|-------------|-----------------|-------------------|--------|
+| 4    | 2.885       | 2.141           | 3.342             | SIMD Go |
+| 8    | 4.382       | 3.105           | 4.266             | SIMD Go |
+| 16   | 6.198       | 6.350           | 6.217             | ARM64汇编 |
+| 64   | 72.37       | 21.11           | 19.87             | ARM64汇编 |
+| 256  | 266.1       | 84.28           | 78.99             | ARM64汇编 |
+| 1024 | 1192        | 345.9           | 321.8             | ARM64汇编 |
+| 4096 | 4955        | 1322            | 1309              | ARM64汇编 |
+
+### 优化前后性能提升
+
+| 长度 | ARM64原始 (ns/op) | ARM64优化 (ns/op) | 性能提升率 |
+|------|-----------------|-----------------|---------|
+| 4    | 2.948           | 3.342           | -13.4%  |
+| 8    | 4.073           | 4.266           | -4.7%   |
+| 16   | 6.953           | 6.217           | +10.6%  |
+| 64   | 35.73           | 19.87           | +44.4%  |
+| 256  | 205.1           | 78.99           | +61.5%  |
+| 1024 | 892.5           | 321.8           | +64.0%  |
+| 4096 | 3660            | 1309            | +64.3%  |
 
 ### 结果分析
 
-- **极小规模（<4）**：GPR 更快。SIMD 启动和边界处理的开销反而拖慢了速度。
-- **小规模（4~16）**：如果长度正好是 4 的倍数，SIMD 有优势，否则 GPR 可能更快。
-- **中等规模（24 及以上）**：SIMD 优势明显，且随着长度增加，优势越来越大。
-- **极大规模**：SIMD 远超 GPR。
+- **小规模向量（4-8元素）**：
+  - Go编译器优化的SIMD实现在小数组上始终表现最佳，如4元素时仅需2.141ns
+  - 优化后的ARM64汇编在小数组上反而略微变慢，这是由于增加了处理逻辑和额外的初始化开销
+
+- **中等规模（16元素）**：
+  - 在这个临界点上，优化后的ARM64汇编版本首次超过了Go SIMD版本，性能提升了10.6%
+  - 所有三种实现在此点性能接近，差距在1-2%之间
+
+- **中大规模（64-1024元素）**：
+  - 优化后的ARM64汇编实现表现最佳，超越了Go SIMD版本
+  - 在256元素时，优化后的汇编版本比原始版本快了61.5%，也比Go SIMD版本快了约6.3%
+
+- **大规模（4096元素）**：
+  - 优化后的ARM64汇编版本从之前的最慢变成了最快，整体性能提升了64.3%
+  - 优化汇编版本比Go SIMD版本快了约1%，表明精心优化的汇编代码在大规模数据处理时可与编译器优化版本相匹敌
+
+### 优化效果分析
+
+优化后的ARM64汇编版本的关键改进：
+
+1. **多累加器技术**：使用4个独立的浮点寄存器作为累加器，减少了寄存器间的依赖，提高了指令级并行度
+
+2. **批处理优化**：每次循环处理4个元素，相比原版本的2个元素提高了数据吞吐量
+
+3. **针对性能临界点优化**：为不同数据规模提供了专门的处理路径，尤其优化了中大型数组处理
+
+4. **边界条件处理**：专门为小规模数组（<4个元素）设计了更高效的处理路径
+
+此案例表明，虽然现代编译器优化能力已经非常强大，但针对特定场景的手工汇编优化仍然可以带来稳定的性能提升。在处理中大规模数据时，精心设计的汇编实现能够小幅超越高级语言的自动优化版本（约1-7%的性能优势），不过需要权衡这种小幅提升是否值得付出额外的开发和维护成本。
 
 ## SIMD 的适用性与最佳实践
 
