state compress prefix sum: change more complex similar

--- a/algo/state_compress_prefix_sum/状态压缩前缀和.md
+++ b/algo/state_compress_prefix_sum/状态压缩前缀和.md
@@ -1,4 +1,3 @@
-<!-- filepath: /Users/tal/GolandProjects/code_for_article/algo/state_compress_prefix_sum/状态压缩前缀和.md -->
 # 状态压缩与前缀和的魔力：破解LeetCode 1371元音之谜
 
 哈喽，各位算法爱好者们！今天我们要一起探索一道非常有趣的 LeetCode 题目——第 1371 题：“每个元音包含偶数次的最长子字符串”。这道题不仅能考察我们对字符串处理的熟悉程度，更是巧妙地融合了位运算中的“状态压缩”和经典的“前缀和”思想。别担心，我会像你的老朋友一样，用最通俗易懂的方式，带你一步步揭开它的神秘面纱！
@@ -134,22 +133,33 @@
 
 掌握了上面的技巧，我们来看看还有哪些题目可以用类似的思路解决：
 
-1.  **LeetCode 560. 和为 K 的子数组 (Subarray Sum Equals K)**
-    *   **相似之处：** 都是找子数组满足某种“和”的性质。
-    *   **技巧应用：** 计算前缀和 `prefix_sum`。目标是找 `prefix_sum[j] - prefix_sum[i] == K`，变形为 `prefix_sum[j] - K == prefix_sum[i]`。用哈希表存储 `prefix_sum` 值及其出现的次数（因为这里是计数，不是求最长）。
-    *   **细微差别：** 这里是普通的数值和，不是位运算状态。关注的是子数组数量。
+1.  **LeetCode 1915. Number of Wonderful Substrings**
+    *   **题目简介：** 一个“美妙”字符串，定义为其中最多只有一个字母出现奇数次。给定一个由前十个小写字母（'a' 到 'j'）组成的字符串 `word`，返回美妙非空子字符串的数量。
+    *   **相似之处与技巧应用：**
+        *   **状态压缩：** 与 1371 题用5位二进制表示5个元音的奇偶性类似，此题用一个10位二进制数（`mask`）来表示 'a' 到 'j' 这10个字符出现的奇偶性。每一位对应一个字符，0表示偶数次，1表示奇数次。
+        *   **前缀状态：** 遍历字符串，实时维护从字符串开头到当前位置的 `current_mask`。
+        *   **目标转换：** 一个子串 `word[i..j]` 是美妙的，意味着其字符奇偶性掩码 (`prefix_mask[j] XOR prefix_mask[i-1]`) 要么是 `0`（所有字符都是偶数次），要么是只有一个 bit 为1（只有一个字符是奇数次，即掩码是2的幂）。
+        *   **哈希表：** 使用哈希表（或大小为 2^10 的数组）`seen_masks` 来存储每个 `prefix_mask` 出现的次数。
+        *   **解题逻辑：** 当遍历到索引 `j`，得到 `current_prefix_mask` 时：
+            1.  我们查找 `seen_masks[current_prefix_mask]`。这对应了 `prefix_mask[j] XOR prefix_mask[i-1] == 0` 的情况，即子串所有字符偶数次。
+            2.  我们再依次尝试10种可能（`k` 从 0 到 9），查找 `seen_masks[current_prefix_mask XOR (1 << k)]`。这对应了 `prefix_mask[j] XOR prefix_mask[i-1] == (1 << k)` 的情况，即子串只有一个字符是奇数次。
+        将这些查找到的次数累加起来，就是以当前字符结尾的美妙子串数量。
+    *   **细微差别：** 1371 要求所有元音都是偶数次（目标状态为0），而此题允许目标状态为0或2的幂。1371求最长，此题求数量。
 
-2.  **LeetCode 523. 连续的子数组和 (Continuous Subarray Sum)**
-    *   **相似之处：** 子数组和是 `k` 的倍数。
-    *   **技巧应用：** `(sum[j] - sum[i]) % k == 0`  => `sum[j] % k == sum[i] % k` (需要注意 `sum[i]` 为0的情况，以及子数组长度至少为2的约束)。哈希表存储 `前缀和 % k` 的值及其首次出现的索引。若遇到相同的模值，则它们之间的子数组和是 `k` 的倍数。
-    *   **细微差别：** 引入了模运算。有子数组长度的额外约束。
+2.  **LeetCode 1442. Count Triplets That Can Form Two Arrays of Equal XOR**
+    *   **题目简介：** 给定一个整数数组 `arr`，找到满足 `0 <= i < j <= k < arr.length` 且 `a == b` 的三元组 `(i, j, k)` 的数目，其中 `a = arr[i] ^ arr[i+1] ^ ... ^ arr[j-1]` 且 `b = arr[j] ^ arr[j+1] ^ ... ^ arr[k]`。
+    *   **相似之处与技巧应用：**
+        *   **前缀XOR：** 这是解决区间XOR和问题的经典技巧。令 `prefix_xor[x]` 为 `arr[0] ^ ... ^ arr[x-1]` （`prefix_xor[0] = 0`）。
+        *   **条件转换：** `a == b` 等价于 `a ^ b == 0`。
+          `a = prefix_xor[j] ^ prefix_xor[i]`
+          `b = prefix_xor[k+1] ^ prefix_xor[j]`
+          所以 `(prefix_xor[j] ^ prefix_xor[i]) ^ (prefix_xor[k+1] ^ prefix_xor[j]) == 0`。
+          由于 `X ^ X = 0`，上式简化为 `prefix_xor[i] ^ prefix_xor[k+1] == 0`，即 `prefix_xor[i] == prefix_xor[k+1]`。
+        *   **核心模式：** 问题转化为找到所有满足 `prefix_xor[i] == prefix_xor[k+1]` 的 `(i, k)` 对。这与 1371 题中寻找 `mask[j] == mask[i]` 的模式完全一致！
+        *   **计数：** 如果我们找到了这样的 `i` 和 `k`（令 `idx1 = i`，`idx2 = k+1`，且 `idx1 < idx2`），那么对于这个确定的 `i` 和 `k`，`j` 可以取 `i+1, i+2, ..., k`。共有 `k - i` 个选择。遍历所有可能的 `i` 和 `k`，累加 `k-i`。
+    *   **细微差别：** 这里的“状态”是单一的XOR和，而不是像1371那样由多个独立奇偶性组成的复合状态。但“前缀状态相等则区间状态为目标（0）”的原理是通用的。此题求满足条件的三元组数量。
 
-3.  **LeetCode 1248. 统计「优美子数组」 (Count Number of Nice Subarrays)**
-    *   **相似之处：** 子数组中奇数个数等于 `k`。
-    *   **技巧应用：** 可以将奇数看作1，偶数看作0。问题转化为求子数组和为 `k`。同样是前缀和 + 哈希表。`prefix_odd_count[j] - prefix_odd_count[i] == k`。
-    *   **细微差别：** 状态是奇数的个数，不是奇偶性。
-
-这些题目虽然场景各异，但核心思想——利用前缀信息和哈希表来优化查找——是相通的。
+这些题目虽然具体场景和目标有所不同，但它们都巧妙地运用了“状态表示/压缩”、“前缀信息（和/XOR/状态）”以及“哈希表（或数组）优化查找”的核心思想，值得我们深入体会。
 
 ## 结语
 
