--- a/algo/prefix_consistency/前缀一致性状态计数.md
+++ b/algo/prefix_consistency/前缀一致性状态计数.md
@@ -168,17 +168,44 @@
 
 1.  **LeetCode 769. Max Chunks To Make Sorted (最多能完成排序的块)**
     *   **题目大意**：给定一个 `0` 到 `arr.length - 1` 的排列 `arr`。将数组分成若干“块”，每块单独排序后拼接起来，如果能得到整个数组的排序结果，问最多能分多少块。
-    *   **如何应用技巧**：这题和灯泡题惊人地相似！我们遍历数组 `arr`，维护一个 `max_val_in_chunk` (当前块中遇到的最大元素值)。如果遍历到索引 `i` 时，`max_val_in_chunk == i`，这意味着 `arr[0...i]` 这些元素恰好是 `0...i` 的一个排列（只是顺序可能乱了）。此时，`arr[0...i]` 就可以形成一个独立的块，排序后能保证是 `0...i`。
-    *   **比较**：核心逻辑几乎一样，都是“已处理元素数量”（这里是 `i+1` 个元素，最大索引是 `i`）和“已处理元素中的最大值”之间的匹配。
+    *   **特征识别与技巧关联**：
+        *   **排列特性**：看到输入是 `0` 到 `arr.length - 1` 的排列，这立刻让我们想起了“灯泡开关 III”中 `1` 到 `n` 的排列，这是应用“计数与边界匹配”的一个强烈信号。
+        *   **分块与有序**：题目要求将数组分块，使得每块排序后能构成全局有序。这意味着每个块的元素集合必须是连续的。例如，第一个块如果包含 `k` 个元素，那么这 `k` 个元素必须是 `0, 1, ..., k-1`。
+        *   **如何判断“完美块”**：当我们遍历数组到索引 `i` 时，我们考虑的是 `arr[0...i]` 这个前缀。这个前缀包含了 `i+1` 个元素。如果这个前缀能形成一个独立的、排序后能完美对接的块，那么它所包含的所有元素的最大值必须恰好是 `i`。
+    *   **如何应用技巧**：这题和灯泡题惊人地相似！我们遍历数组 `arr`，维护一个 `max_val_in_prefix` (当前处理的前缀 `arr[0...i]` 中遇到的最大元素值)。
+        *   “已处理元素数量”对应的是 `i+1` (或者说，我们期望的最大元素应该是 `i`，因为是0-indexed)。
+        *   “边界特征”是 `max_val_in_prefix`。
+        *   当遍历到索引 `i` 时，如果 `max_val_in_prefix == i`，这意味着 `arr[0...i]` 这 `i+1` 个元素，不多不少，恰好是数字 `0, 1, ..., i` 的一个排列。此时，`arr[0...i]` 就可以形成一个独立的块。计数器加一，然后从 `i+1` 开始寻找下一个块。
+    *   **比较**：核心逻辑几乎一样，都是“已处理元素数量”（这里是 `i+1` 个元素，其对应的期望最大值是 `i`）和“已处理元素中的实际最大值”之间的匹配。
 
 2.  **LeetCode 798. Smallest Rotation with Highest Score (得分最高的最小轮调)**
     *   **题目大意**：给定一个数组 A，我们可以选择一个 K 进行轮调，轮调后新数组 B 中，满足 `B[i] <= i` 的元素会得分。求能获得最高分的最小 K。
-    *   **如何应用技巧 (间接)**：虽然不是直接的“计数与边界匹配”，但这题通常用差分数组来解决。差分数组的思想是，当一个操作对一个区间产生影响时，我们只在区间的端点记录变化。这和我们关注“边界”和“状态变化”有异曲同工之妙。你需要分析每个元素在不同轮调 K 值下，何时开始得分，何时结束得分，从而找到最优 K。
+    *   **特征识别与技巧关联**：
+        *   **状态遍历与最优解**：题目要求我们尝试所有可能的轮调状态 `K`，并找到一个使得分数最高的 `K`。这暗示了我们需要一种有效的方法来计算或更新每个状态下的分数。
+        *   **条件与边界**：每个元素 `A[original_idx]` 是否得分，取决于轮调后的索引 `new_idx = (original_idx - K + N) % N` 和元素值 `A[original_idx]` 是否满足 `A[original_idx] <= new_idx`。对于固定的 `A[original_idx]`，这个不等式会定义出 `K` 的一个或多个连续区间（“得分区间”）。这些区间的端点就是“边界”。
+        *   **变化累积**：当 `K` 变化时，一些元素开始得分，一些元素停止得分。我们关心的是总分的变化。这非常适合用差分数组来高效处理区间更新和查询。
+    *   **如何应用技巧 (间接)**：虽然不是直接的“计数与边界匹配”，但这题通常用差分数组来解决，其核心思想与我们关注“边界”和“状态变化”是相通的。
+        *   对每个元素 `A[j]`，我们计算出它贡献分数的 `K` 的范围 `[K_start, K_end]`。
+        *   使用差分数组 `score_deltas`：在 `score_deltas[K_start]` 处加1，在 `score_deltas[K_end + 1]` 处减1。
+        *   “状态”可以看作是当前的轮调值 `K`。通过对 `score_deltas` 数组求前缀和，我们就能得到每个 `K` 对应的总分数。
+        *   这里的“匹配”是找到使累积得分（状态）最高的那个 `K`。技巧体现在通过识别每个元素得分的“边界” `K_start, K_end`，来高效计算所有状态的得分。
+    *   **比较**：重点在于识别“事件点”（某个K值导致某个元素开始/停止得分），并利用这些“边界”信息来累积计算全局状态（总分）。
 
 3.  **LeetCode 45. Jump Game II (跳跃游戏 II)**
     *   **题目大意**：给定一个非负整数数组，你最初位于数组的第一个位置。数组中的每个元素代表你在该位置可以跳跃的最大长度。你的目标是使用最少的跳跃次数到达数组的最后一个位置。
-    *   **如何应用技巧**：这是一个贪心问题。在每一步，我们都想跳到能让我们下一次跳得更远的位置。我们需要维护当前能到达的最远位置 `current_farthest` 和上一步能跳到的边界 `last_jump_max_reach`。当遍历超过 `last_jump_max_reach` 时，说明必须进行下一次跳跃了，跳跃次数加一，同时更新 `last_jump_max_reach` 为 `current_farthest`。
-    *   **比较**：这里也是通过维护“边界”（能到达的最远位置）和“计数”（跳跃次数）来逐步推进。
+    *   **特征识别与技巧关联**：
+        *   **最优化问题与贪心**：“最少跳跃次数”提示这可能是一个可以用贪心策略解决的优化问题。
+        *   **逐步决策与边界扩展**：每一步跳跃，我们都希望尽可能地扩展我们能到达的“边界”。
+        *   **状态变量**：我们需要跟踪当前的跳跃次数，以及当前跳跃能到达的最远位置，还有从当前已覆盖范围出发能到达的全局最远位置。
+    *   **如何应用技巧**：这是一个贪心问题。
+        *   “计数器”：`jumps`，记录跳跃次数。
+        *   “边界”：
+            *   `current_jump_end`: 当前这一跳所能覆盖到的最远索引。当我们遍历的 `i` 到达这个点时，意味着这一跳的潜力用尽，必须进行下一跳。
+            *   `farthest_reach_so_far`: 在当前这一跳所能覆盖的所有位置中，进行下一步跳跃所能到达的全局最远索引。
+        *   “触发条件/状态更新”：
+            *   我们遍历数组（除了最后一个元素）。在每个位置 `i`，我们更新 `farthest_reach_so_far = max(farthest_reach_so_far, i + nums[i])`。这代表了如果我们从 `i` 起跳，能到达的最远地方。
+            *   当 `i == current_jump_end` 时，说明我们已经到达了当前跳跃的极限。此时，我们必须进行一次新的跳跃，所以 `jumps` 加1，并且下一次跳跃的终点 `current_jump_end` 更新为 `farthest_reach_so_far`（因为这是我们用上一次跳跃的次数所能铺垫到的最远距离）。
+    *   **比较**：这里也是通过维护“边界”（`current_jump_end` 和 `farthest_reach_so_far`）和“计数”（`jumps`）来逐步推进，并在到达当前边界时触发状态更新（增加跳跃次数，设定新的边界）。
 
 这些题目虽然各有侧重，但“迭代中维护状态、关注边界条件、利用输入特性简化判断”的思维方式是相通的。
 
