prefix consistent: change two similar

--- a/algo/prefix_consistency/前缀一致性状态计数.md
+++ b/algo/prefix_consistency/前缀一致性状态计数.md
@@ -178,34 +178,40 @@
         *   当遍历到索引 `i` 时，如果 `max_val_in_prefix == i`，这意味着 `arr[0...i]` 这 `i+1` 个元素，不多不少，恰好是数字 `0, 1, ..., i` 的一个排列。此时，`arr[0...i]` 就可以形成一个独立的块。计数器加一，然后从 `i+1` 开始寻找下一个块。
     *   **比较**：核心逻辑几乎一样，都是“已处理元素数量”（这里是 `i+1` 个元素，其对应的期望最大值是 `i`）和“已处理元素中的实际最大值”之间的匹配。
 
-2.  **LeetCode 798. Smallest Rotation with Highest Score (得分最高的最小轮调)**
-    *   **题目大意**：给定一个数组 A，我们可以选择一个 K 进行轮调，轮调后新数组 B 中，满足 `B[i] <= i` 的元素会得分。求能获得最高分的最小 K。
-    *   **特征识别与技巧关联**：
-        *   **状态遍历与最优解**：题目要求我们尝试所有可能的轮调状态 `K`，并找到一个使得分数最高的 `K`。这暗示了我们需要一种有效的方法来计算或更新每个状态下的分数。
-        *   **条件与边界**：每个元素 `A[original_idx]` 是否得分，取决于轮调后的索引 `new_idx = (original_idx - K + N) % N` 和元素值 `A[original_idx]` 是否满足 `A[original_idx] <= new_idx`。对于固定的 `A[original_idx]`，这个不等式会定义出 `K` 的一个或多个连续区间（“得分区间”）。这些区间的端点就是“边界”。
-        *   **变化累积**：当 `K` 变化时，一些元素开始得分，一些元素停止得分。我们关心的是总分的变化。这非常适合用差分数组来高效处理区间更新和查询。
-    *   **如何应用技巧 (间接)**：虽然不是直接的“计数与边界匹配”，但这题通常用差分数组来解决，其核心思想与我们关注“边界”和“状态变化”是相通的。
-        *   对每个元素 `A[j]`，我们计算出它贡献分数的 `K` 的范围 `[K_start, K_end]`。
-        *   使用差分数组 `score_deltas`：在 `score_deltas[K_start]` 处加1，在 `score_deltas[K_end + 1]` 处减1。
-        *   “状态”可以看作是当前的轮调值 `K`。通过对 `score_deltas` 数组求前缀和，我们就能得到每个 `K` 对应的总分数。
-        *   这里的“匹配”是找到使累积得分（状态）最高的那个 `K`。技巧体现在通过识别每个元素得分的“边界” `K_start, K_end`，来高效计算所有状态的得分。
-    *   **比较**：重点在于识别“事件点”（某个K值导致某个元素开始/停止得分），并利用这些“边界”信息来累积计算全局状态（总分）。
+2.  **LeetCode 763. Partition Labels (划分字母区间)**
+    *   **题目大意**: 字符串 `S` 由小写字母组成。我们要把这个字符串划分为尽可能多的片段，同一个字母只会出现在其中的一个片段。返回一个表示每个字符串片段的长度的列表。
+    *   **特征识别与技巧关联**:
+        *   **迭代与边界确定**: 我们需要遍历字符串，逐步确定每个分区的边界。
+        *   **贪心思想**: 为了划分尽可能多的片段，我们希望每个片段尽可能短。这个目标引导我们寻找最小的有效划分。
+        *   **“边界”的定义**: 对于一个潜在的划分（例如从索引 `start` 到 `i`），这个划分要想成立，它必须包含其中所有字符的全部出现。因此，这个划分的实际右边界，是由这个划分内所有字符的“最远出现位置”决定的。
+    *   **如何应用技巧**:
+        1.  首先，预处理一遍字符串，记录每个字符最后出现的位置（可以使用一个哈希表或大小为26的数组）。
+        2.  初始化 `start_of_partition = 0` (当前处理片段的起始索引)，`end_of_current_partition = 0` (当前片段必须延伸到的最远索引)，以及一个列表来存放结果片段的长度。
+        3.  遍历字符串，设当前索引为 `i`，字符为 `S[i]`：
+            a.  更新 `end_of_current_partition = max(end_of_current_partition, last_occurrence[S[i]])`。这个 `end_of_current_partition` 就是我们当前正在构建的这个分区的“动态最远边界”。为了确保当前片段的有效性，它至少要延伸到这里。
+            b.  **判断关键条件**: 如果当前遍历到的索引 `i` 恰好等于 `end_of_current_partition`，这意味着从 `start_of_partition` 到 `i` 的这个子串中，所有字符的最后出现位置都已经被包含在这个子串内部了。没有字符会“溢出”到这个子串的右边。因此，`[start_of_partition, i]`构成了一个合法的、尽可能短的片段。
+            c.  此时，将这个片段的长度 `(i - start_of_partition + 1)` 添加到结果列表中。
+            d.  更新 `start_of_partition = i + 1`，准备开始寻找下一个片段。
+    *   **与1375的相似性**:
+        *   在1375中，当“已点亮灯泡数量” (`num_bulbs_on`) 等于“已点亮灯泡中的最大编号” (`rightmost_on_bulb`) 时，形成一个“完美点亮”时刻。
+        *   在763中，当前处理的字符索引 `i` 类似于一个“已扫描元素指针”。`end_of_current_partition` 是根据已扫描元素动态确定的“片段必须达到的最远边界”。当 `i == end_of_current_partition` 时，意味着当前指针 `i` 已经到达了这个动态边界，所有从 `start_of_partition` 到 `i` 的元素都已“收拢”完毕，形成了一个有效的、独立的片段。这与1375中计数与边界匹配的逻辑是相通的：一个处理指针（或计数）达到了一个动态确定的边界，标志着一个阶段的完成。
 
-3.  **LeetCode 45. Jump Game II (跳跃游戏 II)**
-    *   **题目大意**：给定一个非负整数数组，你最初位于数组的第一个位置。数组中的每个元素代表你在该位置可以跳跃的最大长度。你的目标是使用最少的跳跃次数到达数组的最后一个位置。
-    *   **特征识别与技巧关联**：
-        *   **最优化问题与贪心**：“最少跳跃次数”提示这可能是一个可以用贪心策略解决的优化问题。
-        *   **逐步决策与边界扩展**：每一步跳跃，我们都希望尽可能地扩展我们能到达的“边界”。
-        *   **状态变量**：我们需要跟踪当前的跳跃次数，以及当前跳跃能到达的最远位置，还有从当前已覆盖范围出发能到达的全局最远位置。
-    *   **如何应用技巧**：这是一个贪心问题。
-        *   “计数器”：`jumps`，记录跳跃次数。
-        *   “边界”：
-            *   `current_jump_end`: 当前这一跳所能覆盖到的最远索引。当我们遍历的 `i` 到达这个点时，意味着这一跳的潜力用尽，必须进行下一跳。
-            *   `farthest_reach_so_far`: 在当前这一跳所能覆盖的所有位置中，进行下一步跳跃所能到达的全局最远索引。
-        *   “触发条件/状态更新”：
-            *   我们遍历数组（除了最后一个元素）。在每个位置 `i`，我们更新 `farthest_reach_so_far = max(farthest_reach_so_far, i + nums[i])`。这代表了如果我们从 `i` 起跳，能到达的最远地方。
-            *   当 `i == current_jump_end` 时，说明我们已经到达了当前跳跃的极限。此时，我们必须进行一次新的跳跃，所以 `jumps` 加1，并且下一次跳跃的终点 `current_jump_end` 更新为 `farthest_reach_so_far`（因为这是我们用上一次跳跃的次数所能铺垫到的最远距离）。
-    *   **比较**：这里也是通过维护“边界”（`current_jump_end` 和 `farthest_reach_so_far`）和“计数”（`jumps`）来逐步推进，并在到达当前边界时触发状态更新（增加跳跃次数，设定新的边界）。
+3.  **LeetCode 1221. Split a String in Balanced Strings (分割平衡字符串)**
+    *   **题目大意**: 在一个「平衡字符串」中，'L' 和 'R' 字符的数量是相同的。给一个平衡字符串 `s`，请你将它分割成尽可能多的平衡字符串，并返回你可以获得的平衡字符串的数量。
+    *   **特征识别与技巧关联**:
+        *   **简单计数与归零**: 这是“计数与边界匹配”模式非常直接和简洁的体现。
+        *   **迭代处理**: 只需要单次遍历字符串。
+    *   **如何应用技巧**:
+        1.  初始化 `balanced_substring_count = 0` (最终要返回的答案)。
+        2.  初始化 `balance_counter = 0` (例如，遇到 'L' 加1，遇到 'R' 减1，或者反之亦可)。这个计数器追踪当前前缀中 'L' 和 'R' 的相对数量。
+        3.  遍历字符串 `s` 中的每个字符 `char`:
+            a.  根据 `char` 更新 `balance_counter`。例如，如果 `char == 'L'`，则 `balance_counter++`；如果 `char == 'R'`，则 `balance_counter--`。
+            b.  **判断关键条件**: 在每一步更新 `balance_counter` 后，检查它是否等于 `0`。如果 `balance_counter == 0`，这意味着从上一个平衡点（或者从字符串的起始位置）到当前字符为止，所形成的子字符串中 'L' 和 'R' 的数量恰好相等。
+            c.  此时，找到了一个新的平衡子字符串，所以 `balanced_substring_count` 加一。
+    *   **与1375的相似性**:
+        *   `balance_counter` 扮演了一个动态的“状态值”或“计数器”的角色，它反映了当前前缀的某种属性（L/R字符的平衡度）。
+        *   `0` 是一个固定的“边界值”或“目标状态”。
+        *   当动态的“状态值” `balance_counter` 达到（或回到）固定的“边界值” `0` 时，就意味着一个有效的片段（平衡字符串）被识别出来，主计数器 `balanced_substring_count` 随之增加。这与1375中 `num_bulbs_on == rightmost_on_bulb` 的逻辑高度相似：都是一个运行中的状态量达到了一个特定的目标/边界值，从而触发一次有效事件的计数。
 
 这些题目虽然各有侧重，但“迭代中维护状态、关注边界条件、利用输入特性简化判断”的思维方式是相通的。
 
