multimodling: add more graph, rm wrong data

--- a/multimoding/多模态上下文管理探讨.md
+++ b/multimoding/多模态上下文管理探讨.md
@@ -332,6 +332,31 @@
 
 就像银行系统，存款取款操作（写）和查询余额操作（读）使用不同的优化策略。
 
+**CQRS架构图：**
+```mermaid
+C4Container
+    Container_Boundary(c1, "Command Side (写操作)") {
+        Container(cmdHandler, "Command Handler", "专门处理用户操作")
+        Container(eventStore, "Event Store", "存储事件流")
+    }
+    
+    Container_Boundary(c2, "Query Side (读操作)") {
+        Container(queryHandler, "Query Handler", "优化查询响应")
+        Container(readModel, "Read Model", "预构建的视图")
+    }
+    
+    Container_Boundary(c3, "Event Processing") {
+        Container(eventProcessor, "Event Processor", "事件处理器")
+        Container(projection, "Projection", "状态投影")
+    }
+    
+    Rel(cmdHandler, eventStore, "写入事件")
+    Rel(eventStore, eventProcessor, "事件流")
+    Rel(eventProcessor, projection, "状态计算")
+    Rel(projection, readModel, "更新视图")
+    Rel(queryHandler, readModel, "查询数据")
+```
+
 **2. 事件重放与状态恢复**
 系统将用户的每个操作都记录为事件：
 
@@ -361,17 +386,7 @@
 - 系统通过时间戳和用户优先级自动解决
 - 无法自动解决的冲突会提示用户选择
 
-#### 实现效果
-
-**性能提升**：
-- 用户操作响应时间：从3-5秒降低到800ms
-- 系统并发处理能力：提升300%
-- 状态查询速度：提升150%
-
-**可靠性提升**：
-- 状态丢失概率：从0.1%降低到0.001%
-- 系统故障恢复时间：从几小时缩短到几分钟
-- 数据一致性：达到99.9%
+通过这种事件溯源与CQRS架构，系统实现了更快的用户操作响应、更强的并发处理能力、更好的可靠性和数据一致性保障。
 
 ### 核心组件四：智能预测引擎 - 主动式体验优化器
 
@@ -420,17 +435,7 @@
 - 预加载资源有TTL（生存时间）
 - 资源使用率低的内容会被清理
 
-#### 实现效果
-
-**用户体验提升**：
-- 用户感觉系统"很聪明"，总是能预测需求
-- 响应速度比预期快50%
-- 用户满意度提升40%
-
-**技术指标**：
-- 预测准确率：75%
-- 预加载命中率：68%
-- 系统资源利用率：优化20%
+通过这种智能预测机制，系统能够为用户提供更加主动和个性化的服务体验，让用户感觉系统"很聪明"，总是能够预测并满足他们的需求。
 
 ## 🔄 架构协同：一个真正体现价值的复杂案例解析
 
@@ -612,6 +617,51 @@ graph TD
     *   当网络恢复时，这些被缓存的事件会自动与云端同步，确保了在弱网环境下用户的操作不会丢失，状态依然保持最终一致。
 
 通过这个完整的流程，我们可以看到，四大核心组件各司其职且紧密配合，将一次复杂、多变、且充满挑战的用户交互，转化为了一次流畅、智能、可靠的体验。
+
+---
+
+### 跨设备事件同步详细流程
+
+下面的泳道图展示了手机、平板、Kafka消息队列、ClickHouse数据库四个组件之间的事件同步时序：
+
+```mermaid
+sequenceDiagram
+    participant Phone as 手机端
+    participant Kafka as Kafka消息队列
+    participant ClickHouse as ClickHouse数据库
+    participant Tablet as 平板端
+    
+    Note over Phone,Tablet: 用户在手机上学习数学题
+    
+    Phone->>Kafka: 事件1: 拍照上传数学题
+    Kafka->>ClickHouse: 持久化事件1
+    
+    Phone->>Kafka: 事件2: 语音+触控查询
+    Kafka->>ClickHouse: 持久化事件2
+    
+    Phone->>Kafka: 事件3: 用户纠正意图
+    Kafka->>ClickHouse: 持久化事件3
+    
+    Note over Phone,Tablet: 用户切换到平板设备
+    
+    Tablet->>Kafka: 请求同步最新状态
+    Kafka->>ClickHouse: 查询用户事件流
+    ClickHouse->>Kafka: 返回事件1-3
+    Kafka->>Tablet: 推送完整事件序列
+    
+    Note over Tablet: 平板本地重放事件流，重建状态
+    
+    Tablet->>Tablet: 重放事件1: 恢复拍照状态
+    Tablet->>Tablet: 重放事件2: 恢复查询状态
+    Tablet->>Tablet: 重放事件3: 恢复纠正后状态
+    
+    Note over Tablet: 状态同步完成，用户可无缝继续
+    
+    Tablet->>Kafka: 事件4: 继续解题操作
+    Kafka->>ClickHouse: 持久化事件4
+    
+    Note over Phone,Tablet: 状态在所有设备间保持一致
+```
 
 ---
 
